--- a/lean.tex
+++ b/lean.tex
@@ -34,6 +34,9 @@
 \input{style.sty}
 
 \usepackage[english,german]{babel} 
+
+\newcommand{\Var}{\mbox{Var}}
+
 \begin{document}
 
 
@@ -75,5 +78,3 @@
 %\end{multicols}
 
 \end{document}
-
-
