--- a/kap3.tex
+++ b/kap3.tex
@@ -6,3 +6,15 @@ $$p_X(x_k) = P[X=x_k]=\frac{1}{N} \mbox{   für } k=1,\dots, N$$
 
 \subsection{Unabhängige 0-1 Experimente}
 Wir betrachten eine Folge gleichartiger Experimente, die alle nur mit Erfolg oder Misserfolg enden können und betrachten die Ereignisse $A_i = \{\mbox{Erfolg beim }i\mbox{-ten Experiment}\}$. Wir nehmen an, dass alle $A_i$ unabhängig sind und dass $P[A_i]=p$ für alle $i$. Wir können nun eine Indikatorfunktion $Y_i = I_{A_i}$ für jedes $i$ definieren, und danach die Folge von Ereignissen als Folge von 0 und 1 codieren. Dies werden wir für die nächsten Verteilungen brauchen.
+
+\subsection{Bernoulli-Verteilung}
+Sei $X \sim Be(p)$, dann $\E[X] = p$, $\Var[X]=p(1-p)$
+
+\subsection{Binomialverteilung}
+Beschreibt die Anzahl der Erfolge bei $n$ unabhängigen 0-1-Experimenten mit Erfolgsparameter $p$.
+$$p_X(k)=P[X=k]=\binom{n}{k}p^k(1-p)^{n-k} \text{ für } k = 0,1,...,n$$
+$$\E{X}=np, \Var[X]=np(1-p)$$
+
+\subsection{Geometrische Verteilung}
+Unendliche Folge von 0-1-Experimenten mit Erfolgsparameter $p$. Sei $X$ die Wartezeit auf den ersten Erfolg.
+$$p_X=p(1-p)^{k-1}$$
