multicols instead of merging

--- a/kap2.tex
+++ b/kap2.tex
@@ -101,7 +101,7 @@ Für Vektoren von diskreten Zufallsvariablen $(X_1, \dots, X_n)$ definiert man d
 
 Bei zweidimensionalen diskreten Zufallsvariablen erhält man die Gewichtsfunktionen der Randverteilungen als Zeilen- bzw. Spaltensummen der gemeinsamen Gewichtsfunktionen, wie das folgende Bespiel illustriert:
 \begin{center}
-\includegraphics[scale=0.44]{randverteilung.png}
+\includegraphics[scale=0.44]{./images/randverteilung.png}
 \end{center}
 Aus den Randverteilungen kann man jedoch nicht ohne Weiteres die gemeinsame Verteilung herleiten, dazu fehlt Information über die \textit{Abhängigkeitsstruktur} der Zufallsvariable.
 
