--- a/kap4.tex
+++ b/kap4.tex
@@ -146,6 +146,7 @@ Hat man stetige Zufallsvariablen mit Dichten, dann ist die gemeinsame Dichtefunk
 $$ f(x_1, \dots, x_n) = f_{X_1}(x_1) \cdots f_{X_n}(x_n)$$
 \end{definition}
 
+\columnbreak
 \subsection{Bedingte Verteilungen usw}
 
 \begin{definition}[\textbf{Bedingte Dichte, Verteilungsfunktion und Erwartungswert}]
