--- a/kap5.tex
+++ b/kap5.tex
@@ -1,11 +1,16 @@
+\pagebreak
 \section{Ungleichungen und Grenzwertsätze}
 \subsection{Wahrscheinlichkeit \& Konvergenz}
 \begin{definition}[\textbf{Konvergenz in Wahrscheinlichkeit}]
 Sei $X_1,X_2,\dots$ und $Y$ ZV auf gemeinsamen Wahrscheinlichkeitsraum.
 \begin{itemize}
-\item[(i)] $X_1,X_2,\dots$ konvergiert gegen $Y$ \textit{in Wahrscheinlichkeit} falls $$\forall \varepsilon >0. \quad \lim_{n\to \infty} P[ |X_n -Y| > \varepsilon] = 0$$
-\item[(ii)] Für $p>0$ konvergiert die Folge $X_1,X_2,\dots$ gegen $Y$ \textit{in} $L^p$ falls $$\lim_{n\to\infty} \E[ |X_n - Y|^p] = 0$$
-\item[(iii)] $X_1,X_2,\dots$ konvergiert gegen $Y$ \textit{P-fast sicher} falls $$ P\left[ \lim_{n\to\infty} X_n = Y \right] = P \left[ \left \{ \omega \in \Omega \with \lim_{n\to\infty} X_n(\omega) = Y(\omega) \right \} \right] = 1$$
+	\item[(i)] $X_1,X_2,\dots$ konvergiert gegen $Y$ \textit{in Wahrscheinlichkeit} falls $$\forall
+		\varepsilon >0. \quad \lim_{n\to \infty} P[ |X_n -Y| > \varepsilon] = 0$$
+	\item[(ii)] Für $p>0$ konvergiert die Folge $X_1,X_2,\dots$ gegen $Y$ \textit{in} $L^p$ falls
+		$$\lim_{n\to\infty} \E[ |X_n - Y|^p] = 0$$
+	\item[(iii)] $X_1,X_2,\dots$ konvergiert gegen $Y$ \textit{P-fast sicher} falls $$ P\left[
+		\lim_{n\to\infty} X_n = Y \right] = P \left[ \left \{ \omega \in \Omega \with
+		\lim_{n\to\infty} X_n(\omega) = Y(\omega) \right \} \right] = 1$$
 \end{itemize}
 \end{definition}
 
@@ -103,13 +108,3 @@ $$
 	^{\mu_n}
 $$
 \end{satz}
-
-
-
-
-
-
-
-
-
-
