--- a/lean.tex
+++ b/lean.tex
@@ -7,8 +7,9 @@
 %% http://creativecommons.org/licenses/by-sa/3.0/
 %% 
 
-\documentclass[11pt]{article}
-\usepackage[left=1mm, right=1mm, top=1mm, bottom=1mm,paperwidth=140mm, paperheight=297mm]{geometry}
+\documentclass[fontsize=7pt]{scrartcl}
+\usepackage[a4paper, landscape, margin=0.5cm]{geometry}
+\usepackage[T1]{fontenc}
 \usepackage[utf8x]{inputenc}
 \usepackage{amssymb, amsfonts, amsmath}
 \usepackage{xcolor}
@@ -28,32 +29,34 @@
 
 \usepackage{multirow}
 \usepackage{multicol}
-\columnsep24pt
+\columnsep5pt
 \columnseprule0.1pt
 
 \input{style.sty}
 
 \usepackage[english,german]{babel} 
 
+\setkomafont{disposition}{\normalfont\bfseries}
+\graphicspath{ {./images/} }
+
 \newcommand{\Var}{\mbox{Var}}
 
 \begin{document}
 
-
 \author{Jens Eirik Saethre}
 \title{Wahrscheinlichkeit \& Statistik}
 
-\date{\today}
+%\date{\today}
 %\maketitle
 
-\setcounter{tocdepth}{2}
+%\setcounter{tocdepth}{2}
 %\tableofcontents
 
 %\thispagestyle{empty}
 %\newpage
-\setcounter{page}{1}
+%\setcounter{page}{1}
 
-%\begin{multicols}{2}
+\begin{multicols*}{3}
 
 % include the individual chapters
 \part{Wahrscheinlichkeitstheorie}
@@ -75,6 +78,6 @@
 % fill the page
 %\clearpage
 
-%\end{multicols}
+\end{multicols*}
 
 \end{document}
