--- a/kap7.tex
+++ b/kap7.tex
@@ -102,7 +102,7 @@ Die $t$-Verteilung mit $n$ Freiheitsgraden gehört zu einer stetigen Zufallsvari
 
 Sei $Z \sim t_n$. Dann hat $Z$ folgende Eigenschaften:
 \begin{itemize}
-\item \textbf{Dichtefunktion:} $$f_Z(z) = \frac{\Gamma\left( \frac{n+1}{2}\right))}{\sqrt{n\pi} \cdot \Gamma(\frac{n}{2})} \left(1 + \frac{z^2}{n}\right)^{- \frac{n+1}{2}} \quad \quad \quad z \in \R$$
+\item \textbf{Dichtefunktion:} $$f_Z(z) = \frac{\Gamma\left( \frac{n+1}{2}\right)}{\sqrt{n\pi} \cdot \Gamma(\frac{n}{2})} \left(1 + \frac{z^2}{n}\right)^{- \frac{n+1}{2}} \quad \quad \quad z \in \R$$
 $\implies$ für $n=1$ ist dies eine \textit{Cauchy-Verteilung} $\implies$ Erwartungswert existiert für $n=1$ nicht.
 \item für $n\to \infty$ erhält man eine $\mathcal{N}(0,1)$-Verteilung 
 \item \textbf{Erwartungswert:} für $n>1$ gilt: $\E[Z] = 0$
